--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,7 +11,6 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@babel/standalone": "^7.28.6",
     "@octokit/rest": "^22.0.1",
     "@tailwindcss/vite": "^4.1.18",
     "axios": "^1.13.2",
@@ -22,16 +21,13 @@
     "gsap": "^3.14.2",
     "jszip": "^3.10.1",
     "lucide-react": "^0.562.0",
-    "marked": "^17.0.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.71.0",
     "react-icons": "^5.3.0",
     "react-router-dom": "^6.26.1",
     "tailwind-merge": "^3.4.0",
-    "tailwindcss-animate": "^1.0.7",
-    "zod": "^4.3.5",
-    "zustand": "^5.0.10"
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@eslint/js": "^9.8.0",
